# quill

./: .gitignore  README.md  index.html  keepalive.html  package.json  vite.config.ts
.github/workflows/: release.yml
harness/: audit.ts  driver.ts  features.ts  images.ts  mermaid.ts  perf-parse.ts  perf-verify.ts  perf.ts  showcase.ts  smoke-macos.sh  tauri-mock.js
scripts/: check-paint-perf.mjs  check-size-budget.mjs  check-startup-perf.mjs  generate-icon.py  smoke-open-file.mjs
src/: editor-extensions.test.ts  editor-extensions.ts  editor-markdown.test.ts  editor-markdown.ts  editor-ui.test.ts  editor-ui.ts  file-ops.ts  find-bar.test.ts  find-bar.ts  image-extension.ts  image-file-storage.test.ts  image-file-storage.ts  image-support.test.ts  image-support.ts  keyboard-shortcuts.test.ts  keyboard-shortcuts.ts  main.ts  markdown-chunking.test.ts  markdown-paste.test.ts  markdown-paste.ts  math-migration.test.ts  math-migration.ts  platform.test.ts  platform.ts  startup-files.test.ts  startup-files.ts  styles.css  window-close.test.ts  window-close.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: document.icns  icon.icns
src-tauri/src/: lib.rs
