[package]
name = "quill"
version = "0.1.0"
description = "A minimal, fast markdown editor"
authors = ["Eoghan Collins"]
edition = "2021"

[lib]
name = "quill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
url = "2.5.8"
