[package]
name = "quill"
version = "0.1.1"
description = "A minimal, fast markdown editor"
authors = ["Eoghan Collins"]
edition = "2021"

[lib]
name = "quill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Size-optimized release build. The Rust binary dominates the bundle, so strip
# symbols, enable LTO, and optimize for size. The backend does file IO + window
# management (no hot loops), so trading a little codegen speed for size is free.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2.4.6"
url = "2.5.8"

